plugins {
    id 'com.android.application'
    id 'com.google.dagger.hilt.android'
}

apply plugin: 'com.android.application'
apply plugin: 'com.google.dagger.hilt.android'

android {
    compileSdkVersion 36
    buildFeatures {
        viewBinding true
        dataBinding true
        buildConfig true
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0']
        }
    }
    defaultConfig {
        applicationId "com.pasich.mynotes"
        minSdkVersion 23
        targetSdkVersion 36
        versionCode 30
        versionName '2.1.30'
        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
        resValue "string", "whatNewVersion", "\"🔥 v${versionName}\""
    }

    buildTypes {
        release {
            debuggable false
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

        }
        debug {
           applicationIdSuffix  ".debug"
            versionNameSuffix  "-debug"
            debuggable true
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

    }
    hilt {
        enableAggregatingTask = true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'com.pasich.mynotes'
    lint {
        abortOnError false
    }
}

ext {
    markwon_version = '4.6.2'
    powerPrefenceVersion = '2.1.0'
    roomVersion = '2.7.2'
}
dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation "androidx.lifecycle:lifecycle-viewmodel:2.9.2"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.20"
    implementation 'androidx.core:core-splashscreen:1.0.1'
    
    // EdgeToEdge support for API 35+
    implementation 'androidx.activity:activity:1.10.1'


    //DI (Hilt)
    implementation 'com.google.dagger:hilt-android:2.57.1'
    annotationProcessor 'com.google.dagger:hilt-compiler:2.57.1'
    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.57.1'
    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.57.1'
    testImplementation 'com.google.dagger:hilt-android-testing:2.57.1'
    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.57.1'


    //Reactive (rxjava2)
    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
    implementation 'androidx.room:room-rxjava2:2.7.2'
    annotationProcessor "androidx.room:room-compiler:$roomVersion"
    testImplementation "androidx.room:room-compiler-processing-testing:$roomVersion"

    //Google Drive integration, Pay Billing
    implementation 'com.google.android.gms:play-services-auth:20.4.1'
    implementation 'com.google.http-client:google-http-client-gson:1.42.1'
    implementation 'com.google.api-client:google-api-client-android:1.26.0'
    implementation 'com.google.apis:google-api-services-drive:v3-rev136-1.25.0'
    implementation 'com.google.android.play:app-update:2.1.0'
    implementation 'com.android.billingclient:billing:6.2.1'


    //Other lib (Gson/Glide/PowerPreferences)
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
    implementation 'com.google.code.gson:gson:2.13.1'
    implementation "com.github.AliAsadi:PowerPreference:$powerPrefenceVersion"


    //Markwon https://noties.io/Markwon/docs/v4/
    implementation"io.noties.markwon:core:$markwon_version"
    implementation"io.noties.markwon:ext-strikethrough:$markwon_version"
    implementation"io.noties.markwon:linkify:$markwon_version"
}

